<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green4"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.1"
        android:background="@color/green3"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/abc"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/a_b_c"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="0.1"
        android:background="@color/gray"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/green1"
            android:gravity="center"
            android:text="@string/result"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@color/green2"
            android:gravity="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_string"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button"
            android:text="@string/caption_button_string" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/button_mutableListOf"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/button"
                android:text="@string/mutablelistof" />

            <Button
                android:id="@+id/button_listOf"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/button"
                android:text="@string/listof" />
        </LinearLayout>

        <Button
            android:id="@+id/button_letter_by_letter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button"
            android:text="@string/letterByLetter" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center">

        <Button
            android:id="@+id/button_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/clean"
            android:text="@string/clean" />
    </LinearLayout>
</LinearLayout>